--- a/pixel_portfolio/package.json
+++ b/pixel_portfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pixel_portfolio_client",
+  "name": "pixel_portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -22,7 +22,6 @@
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.14",
-    "daisyui": "^3.2.1",
     "eslint": "^8.44.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
