--- a/pixel_portfolio/package.json
+++ b/pixel_portfolio/package.json
@@ -14,8 +14,10 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-marquee-slider": "^1.1.5",
     "react-router-dom": "^6.14.1",
-    "sort-by": "^0.0.2"
+    "sort-by": "^0.0.2",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
