--- a/pixel_portfolio/package.json
+++ b/pixel_portfolio/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@octokit/rest": "^20.0.1",
+    "github-calendar": "^2.3.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-github-calendar": "^4.0.1",
+    "react-github-contribution-calendar": "^2.2.0",
     "react-marquee-slider": "^1.1.5",
     "react-router-dom": "^6.14.1",
     "sort-by": "^0.0.2",
