--- a/pixel_portfolio/package.json
+++ b/pixel_portfolio/package.json
@@ -20,6 +20,7 @@
     "react-github-contribution-calendar": "^2.2.0",
     "react-marquee-slider": "^1.1.5",
     "react-router-dom": "^6.14.1",
+    "react-transition-group": "^4.4.5",
     "sort-by": "^0.0.2",
     "yarn": "^1.22.19"
   },
